<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/titlePeople"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_confirmation"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/titlePeople"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/subtitle_name"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/hint_name_receiver"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_name_people"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/hint_name_receiver"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            tools:text="Nome do recebedor"/>

        <TextView
            android:id="@+id/subtitle_value"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/hint_value"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_value"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/hint_name_receiver"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            tools:text="Valor"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:text="@string/btn_cancel"
        android:gravity="center"
        app:strokeColor="@android:color/holo_purple"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        android:layout_marginBottom="15dp"
        android:layout_width="200sp"
        android:layout_height="60sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:text="@string/confirm"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_width="200sp"
        android:layout_height="60sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>